app/assets/stylesheets/style.css.scss
/* ... */
.fill, .pane { position: absolute; left: 0; top: 0; right: 0; bottom: 0; width: 100%; height: 100%; overflow:hidden;}



#product-features{
  ul{
    list-style: none;
    margin-left: 0px;
    li{
      padding:5px;
    }
  }
}

#metrosections {
  background-color: #000;
  color: #fff;
  padding-top: 40px;
  padding-bottom: 40px;
  padding-right:20px;
  padding-left: 40px;
  margin-top: -20px;
  width: 100%;
  overflow: auto;
}

.box{
  margin: 5px;
  padding: 10px;
  font-size: 12x;
  line-height: 1.4em;
  float: left;
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  border : 1px solid #c5c5c5;
}

.pack-tile {
  display: block;
  margin: 5px;
  padding: 10px;
  width: 270px;
  height: 400px;
  color: white;
  cursor: pointer;
  overflow: hidden;
  text-decoration: none;
  background-color: #2C83EF;
  margin-right: 20px;
  position:relative;
}

.pack-tile h2{
  margin-top: 15px;
}

.pack-tile .prize{
  position: absolute;
  bottom: 0;
  left:0;
  width: 100%;
  text-align: right;

}

.pack-tile p{
  padding: 10px;
}
.green{
  background: $green;
}

.wired-blue{
  background: #3f4c6b; /* Old browsers */
  background: -moz-linear-gradient(top, #3f4c6b 0%, #3f4c6b 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#3f4c6b), color-stop(100%,#3f4c6b)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top, #3f4c6b 0%,#3f4c6b 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top, #3f4c6b 0%,#3f4c6b 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top, #3f4c6b 0%,#3f4c6b 100%); /* IE10+ */
  background: linear-gradient(to bottom, #3f4c6b 0%,#3f4c6b 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3f4c6b', endColorstr='#3f4c6b',GradientType=0 ); /* IE6-9 */
  color: #efefef;
}
.black {
  background: #45484d; /* Old browsers */
  color:#efefef;
}
.blue{
  background: #4096ee; /* Old browsers */
  color: #efefef;
}

.light-grey{
  background: $light-grey;
  border : 2px solid #ededed;
  color: black;
}

.blue-border{
  border: 1px solid $blue;
}
.simple {
  border : none;
  -moz-box-shadow: none;
  -webkit-box-shadow: none;
  box-shadow: none;
  -moz-border-radius: 0px;
  -webkit-border-radius: 0px;
  border-radius: 0px;
  color: black;
}

.title {
  font-size: 24px;
  font-weight: 300;
  margin-top: 15px;
  margin-bottom: 15px;
}

.test-list{
  list-style: none;
  margin: 0px;
}

#metrosections h3{
  margin-left: 5px;
  font-weight: 100;
}
#metrosections h4{
  margin-left: 5px;
  font-weight: 100;
}
.mediumListIconTextItem:hover{
  background-color: $light-grey;
  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
  border : 1px solid grey;
}

.mediumListIconTextItem.new{
  border-left: 5px solid green;
}
.mediumListIconTextItem.pause{
  border-left: 5px solid $blue;
}
.mediumListIconTextItem.complete{
   border-left: 5px solid grey;
}

hr.blue{
  border: 1px solid $other-blue;
}

/*Responsive rules*/
@media (min-width: 1200px){
  #test-content {
    .left-pane,.right-pane{
      top: 220px;
      width: 30%;
    }
    .left-pane{
      left: 18%;
    }
  }
}
@media (max-width: 979px) and (min-width: 768px){
  #test-content {
    .left-pane,.right-pane{
      top: 210px;
    }
    .left-pane{
      width:40%;
      left: 80px;
    }
    .right-pane{
      left: 55%;
      width: 35%;
    }
  }
  #metrosections{
    width: 100%;
    .metro-section.tile-span-6{
      width: 700px;
    }
  }
}

@media (max-width: 767px){
  #test-content {
    .single {
      margin-top: 300px;
    }
    .left-pane,.right-pane{
      top: 280px;
    }
    .left-pane{
      width:40%;
    }
    .right-pane{
      left: 55%;
      width: 35%;
    }
  }

  #metrosections{
    width: 100%;
    .metro-section.tile-span-6{
      width: 500px;
    }
    .span3{
      float: left;
      width: 200px;
      clear: both;
    }
    .span2{
      width: 200px;
      height: 200px;
      float:left;
    }
  }
}

@media (max-width: 480px){
  .container-fluid{
    padding: 0px;
  }
  #test-content {
    .left-pane,.right-pane{
      top: 250px;
    }
    .single{
      width: 70%;
      margin-top: 300px;
    }
    .left-pane{
      width:25%;
    }
    .right-pane{
      left: 30%;
      width: 20%;
    }
  }

  #metrosections{
    width: 100%;
    .metro-section.tile-span-6{
      width: 200px;
    }
    .metro-section.tile-span-2{
      width: 100px;
    }
  }
}

/** override bootstrap **/
.span3{
  width: 260px;
}

@media (max-width: 979px){
  .span6 {
    width: 550px;
  }
}


button[type="submit"], input[type="submit"] {
  background-clip: border-box;
  background-color: $blue;
  border-color: transparent;
  color: white;
}

button[type="submit"]:hover, input[type="submit"]:hover {
  background-clip: border-box;
  background-color: $other-blue;
  border-color: transparent;
  color: white;
}

button.win-command {
  background-color: transparent;
  border-color: transparent;
}
button.win-command:hover{
  background-color: transparent;
}
/* Carousel base class */
.carousel {
  margin-bottom: 60px;
}

.carousel .container {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
}

.carousel-control {
  background-color: transparent;
  border: 0;
  font-size: 120px;
  margin-top: 0;
  text-shadow: 0 1px 1px rgba(0,0,0,.4);
}

.carousel .item {
  height: 500px;
}
.carousel img {
  min-width: 100%;
  height: 500px;
}

.carousel-caption {
  background-color: transparent;
  position: static;
  max-width: 550px;
  padding: 0 20px;
  margin-bottom: 100px;
}
/* ... */

